attempt fix on mobile parallax image size issue

--- a/style.scss
+++ b/style.scss
@@ -110,6 +110,10 @@ body {
   background-size: cover;
   display: flex;
   align-items: flex-end;
+  @media (max-width: 415px) {
+    background-attachment: scroll;
+    background-size: auto;
+  }
 }
 
 .prlx-1 {
